# orthanc-advanced-storage

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO  release-notes.md
.github/workflows/: build-and-release.yml
Plugin/: Configuration.json  Constants.h  CustomData.cpp  CustomData.h  DelayedFilesDeleter.cpp  DelayedFilesDeleter.h  FoldersIndexer.cpp  FoldersIndexer.h  Helpers.cpp  Helpers.h  MoveStorageJob.cpp  MoveStorageJob.h  PathGenerator.cpp  PathGenerator.h  PathOwner.cpp  PathOwner.h  Plugin.cpp
Resources/: SyncOrthancFolder.py
Resources/Orthanc/CMake/: Compiler.cmake  DownloadOrthancFramework.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
Resources/Orthanc/Sdk-1.12.10/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.12.7/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.12.8/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.12.99/orthanc/: OrthancCPlugin.h
